fixed white spaces

--- a/frontend/src/assets/styles/home.css
+++ b/frontend/src/assets/styles/home.css
@@ -1,6 +1,6 @@
 .map-container {
     width: 100%;
-    height: 695px; 
+    height: 92vh; 
 }
 
 #menu{
@@ -16,7 +16,7 @@
 @media (max-width: 767px) {
     .map-container {
         width: 100%;
-        height: 840px; 
+        height: 92vh; 
     }
     
     #menu{
